added instructions to set up repo's in gogs and than do s2i

--- a/rhamt/README.adoc
+++ b/rhamt/README.adoc
@@ -3,11 +3,31 @@
 
 * using httpd:2.4 to render reports.
 * Based upon rhamt 4.1.0.Final
-* Spin off two httpd instances, one each for rhamt with annotations and one without. The commands to be used are:
+* Spin off two httpd instances, one each for rhamt with annotations and one without.
+* You use template `httpd.json` for S2I build.
+* Add folders `rhamt-report` & `rhamt-report-without-annotations` in SCM tool like `gogs`
 +
 [source,sh]
 ----
-$ oc process -f ./httpd.json -pSOURCE_REPOSITORY_URL=http://amm-gogs.gogs.svc.cluster.local:3000/gpte/rhte-brownfield-app-migration.git -pSOURCE_REPOSITORY_REF=master -pCONTEXT_DIR=rhamt/rhamt-report | oc create -f -
+$ cd ~/labs/rhamt/rhamt-report
+$ git remote add rh http://amm-gogs-gogs.127.0.0.1.nip.io/gpte/rhamt-report.git
 
-$ oc process -f ./httpd.json -pSOURCE_REPOSITORY_URL=http://amm-gogs.gogs.svc.cluster.local:3000/gpte/rhte-brownfield-app-migration.git -pSOURCE_REPOSITORY_REF=master -pCONTEXT_DIR=rhamt/rhamt-report-without-annotations | oc create -f -
+$ cd ../rhamt-report-without-annotations
+$ git remote add rh http://amm-gogs-gogs.127.0.0.1.nip.io/gpte/rhamt-reports-post-migration.git
+----
+NOTE: Change the gogs path to point to your setup
+
+* Initaite the S2I build
++
+[source,sh]
+----
+$ oc process -f ./httpd.json -pSOURCE_REPOSITORY_URL=http://amm-gogs.gogs.svc.cluster.local:3000/gpte/rhamt-report.git -pSOURCE_REPOSITORY_REF=master | oc create -f -
+
+$ oc process -f ./httpd.json -pSOURCE_REPOSITORY_URL=http://amm-gogs.gogs.svc.cluster.local:3000/gpte/rhamt-reports-post-migration -pSOURCE_REPOSITORY_REF=master -pNAME=post-migration-rhamt-report | oc create -f -
+----
+* Get the `routes` and open in the browser
++
+[source,sh]
+----
+$ oc get routes
 ----
